Require Java 11 for the build