@@ -119,15 +119,6 @@ object PekkoBuild {
     }
   }
 
-  private def jvmGCLogOptions(isJdk11OrHigher: Boolean, isJdk8: Boolean): Seq[String] = {
-    if (isJdk11OrHigher)
-      // -Xlog:gc* is equivalent to -XX:+PrintGCDetails. See:
-      // https://docs.oracle.com/en/java/javase/11/tools/java.html#GUID-BE93ABDC-999C-4CB5-A88B-1994AAAC74D5
-      Seq("-Xlog:gc*")
-    else if (isJdk8) Seq("-XX:+PrintGCTimeStamps", "-XX:+PrintGCDetails")
-    else Nil
-  }
-
   // -XDignore.symbol.file suppresses sun.misc.Unsafe warnings
   final val DefaultJavacOptions = Seq("-encoding", "UTF-8", "-Xlint:unchecked", "-XDignore.symbol.file")
 
@@ -227,8 +218,10 @@ object PekkoBuild {
         // faster random source
         "-Djava.security.egd=file:/dev/./urandom")
 
+      // -Xlog:gc* is equivalent to -XX:+PrintGCDetails. See:
+      // https://docs.oracle.com/en/java/javase/11/tools/java.html#GUID-BE93ABDC-999C-4CB5-A88B-1994AAAC74D5
       defaults ++ CliOptions.runningOnCi
-        .ifTrue(jvmGCLogOptions(JdkOptions.isJdk11orHigher, JdkOptions.isJdk8))
+        .ifTrue(Seq("-Xlog:gc*"))
         .getOrElse(Nil) ++
       JdkOptions.versionSpecificJavaOptions
     },
@@ -327,10 +320,7 @@ object PekkoBuild {
   lazy val docLintingSettings = Seq(
     compile / javacOptions ++= Seq("-Xdoclint:none"),
     test / javacOptions ++= Seq("-Xdoclint:none"),
-    doc / javacOptions ++= {
-      if (JdkOptions.isJdk8) Seq("-Xdoclint:none")
-      else Seq("-Xdoclint:none", "--ignore-source-errors")
-    })
+    doc / javacOptions ++= Seq("-Xdoclint:none", "--ignore-source-errors"))
 
   def loadSystemProperties(fileName: String): Unit = {
     import scala.collection.JavaConverters._
